Yet another implementation of every exercise in Java